<resources>
    <string name="app_name">SmartMatch</string>
    <string name="feature_entry_text">Feature</string>
    <string name="construction_text">Construction</string>
    <string name="person">Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Construction页面 -->
    <string name="c_t">Obtain C and T data</string>
    <string name="area">Area Definition</string>
    <string name="scene_definition">Scenario Definition</string>
    <string name="light_control">Lighting control</string>
    <string name="collection_scene">Collection Scene</string>


    <!-- Area定义页面 -->
    <string name="choose_net">Choose Net</string>
    <string name="choose_area">Choose Area</string>
    <string name="next">Next</string>
    <string name="clusterControl">Cluster control</string>
    <string name="collection_scene_example_text">The second floor of the humanities building</string>
    <string name="app_light_control_choose_item">Select Target</string>

    <string name="light_control_scenario_title">Scenario</string>
    <string name="scenario_example_text">小林的桌面</string>
    <string name="area_example_text">文科楼205</string>
    <!--    找C-->
    <string name="find_c">Find C</string>
    <string name="find_t">Find T</string>
    <string name="choice_t">Choice T</string>
    <string name="next_one">Next_one</string>
    <string name="next_step">Next</string>
    <string name="CurrentlydeterminedC">The currently determined C</string>
    <string name="Single_C_test">Single C test</string>
    <string name="Confirm">Confirm</string>
    <string name="IdentifiedTheCList">Identified CList</string>
    <string name="start">start</string>
    <string name="Full_C_test">Full C test</string>
    <string name="AdjustedTlist">Adjusted T list</string>
    <string name="ThecurrentlyselectedTlist">The currently selected T list</string>
    <string name="BrightnessAdjustment">Brightness adjustment</string>
    <string name="SelectallunadjustedT">Select all unregulated T</string>
    <string name="choose">choice</string>
    <!--    找T-->
    <string name="hand_add">Manual addition</string>
    <string name="smart_add">Auto light adding</string>
    <string name="lights_text">Light on test</string>
    <string name="single_on">Single light on</string>
    <string name="single_off">Single light off</string>
    <string name="single_flicker">Single light flashing</string>
    <string name="all_on">All lights on</string>
    <string name="all_off">All lights off</string>
    <string name="all_flickeer">All lights flashing</string>
    <!--    验证-->
    <string name="check">Verify</string>
    <string name="scene_name">Scene Name</string>
    <string name="finsh">Finished</string>
    <string name="area_name">Area Name :</string>
    <string name="all_c_num">All C Number :</string>
    <string name="all_t_num">All T Number :</string>
    <string name="light_test">Light Test</string>
    <string name="light_are_on_full">The lights are on full</string>
    <string name="light_are_off_full">The lights are off full</string>
    <string name="light_are_all_flashing">The lights are all flashing</string>
    <!--    手动找T-->
    <string name="handfindt">Manually find T</string>
    <string name="bright">bright</string>
    <string name="dark">dark</string>
    <string name="login_input_account">ID</string>
    <string name="login_please_input_password">Password</string>
    <string name="login_title">Login</string>
    <string name="switch_">Switch</string>
    <string name="brightness_adjust">Brightness adjustment</string>
    <string name="choose_scenario">Choose Scenario</string>
</resources>