<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragmentchocieviewModel"
            type="com.example.smartmatch.ui.findC.step_one.FindCStepOneViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.choiceT.ChoiceTFragment">
        <FrameLayout
            android:id="@+id/choiceTFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tiltle_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_t"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/fint_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Please find T"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:textSize="40dp"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_marginTop="10dp">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/ry_choiceT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>
                </ScrollView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginLeft="250dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/hand_iv"
                        android:layout_width="50dp"
                        android:layout_height="80dp"
                        android:orientation="vertical">
                        <ImageView

                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/add"/>
                        <TextView
                            android:id="@+id/smart_iv"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/hand_add"
                            android:textSize="11dp"
                            android:textColor="#302E2E"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="80dp"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/add"/>
                        <TextView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/smart_add"
                            android:layout_marginLeft="3dp"
                            android:textSize="11dp"
                            android:textColor="#302E2E"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lights_text"
                    android:layout_gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">
                    <Button
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:text="@string/single_on"
                        android:textSize="10dp"
                        android:layout_marginLeft="10dp"/>
                    <Button
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:text="@string/single_off"
                        android:textSize="10dp"
                        android:layout_marginLeft="10dp"/>

                    <Button
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:text="@string/single_flicker"
                        android:textSize="10dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">
                    <Button
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:text="@string/all_on"
                        android:textSize="10dp"
                        android:layout_marginLeft="10dp"/>
                    <Button
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:text="@string/all_off"
                        android:textSize="10dp"
                        android:layout_marginLeft="10dp"/>

                    <Button
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:text="@string/all_flickeer"
                        android:textSize="10dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">
                    <Button
                        android:id="@+id/checkAll_next_bt"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:text="@string/next_one"/>

                </LinearLayout>
            </LinearLayout>


        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>