<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.smartmatch.ui.viewModel1.FindCStepOneViewModel" />
        <variable
            name="click"
            type="com.example.smartmatch.ui.findC.step_one.FindCStepOneFragment.Click" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.find_C.step_one.FindCStepOneFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.smartmatch.ui.StatusBarHighView
                android:id="@+id/statusBarHighView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/find_c"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusBarHighView6" />

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_1" />

            <LinearLayout
                android:id="@+id/ll_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/button3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/IdentifiedTheCList"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:padding="3dp"
                        android:id="@+id/rv_IdentifiedTheCList"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingHorizontal="5dp">

                        <Button
                            android:onClick="@{click::start}"
                            android:textColor="@color/white"
                            android:text="@string/start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/login_btn" />

                        <Button
                            android:textColor="@color/white"
                            android:text="@string/Full_C_test"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_btn" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingHorizontal="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/CurrentlydeterminedC"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/currently_determined_C_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/ct_ll_btn_36dp"
                        android:gravity="center"
                        android:text="@{`C`+vm.currentlyDeterminedCBtn.START_CID}"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn"
                        android:text="@string/Single_C_test"
                        android:textColor="@color/white" />

                    <Button
                        android:onClick="@{click::confirm}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/login_btn"
                        android:onClick="@{click::confirm}"
                        android:text="@string/Confirm"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/login_btn"
                android:text="@string/next_one"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/login_btn"
                android:text="@string/next_step"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button3"
                app:layout_constraintTop_toTopOf="@+id/button3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>