<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vmT"
            type="com.example.smartmatch.ui.viewModel1.FindTStepOneViewModel" />

        <variable
            name="clickT"
            type="com.example.smartmatch.ui.findT.step_one.FindTStepOneFragment.Click" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.find_T.step_one.FindTStepOneFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.smartmatch.ui.StatusBarHighView
                android:id="@+id/statusBarHighView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/choice_t"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusBarHighView6" />

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_1" />

            <LinearLayout
                android:id="@+id/ll_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/button3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/AdjustedTlist" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_AdjustedTlist"
                            android:layout_width="match_parent"
                            android:layout_height="100dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/ThecurrentlyselectedTlist" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_ThecurrentlyselectedTlist"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:onClick="@{clickT::chose}"
                        android:text="@string/choose"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn" />

                    <Button
                        android:onClick="@{clickT::chooseAllNotAudit}"
                        android:paddingHorizontal="5dp"
                        android:text="@string/SelectallunadjustedT"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BrightnessAdjustment" />

                    <SeekBar
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:onClick="@{clickT::confirm}"
                        android:text="@string/Confirm"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/login_btn"
                android:text="@string/next_one"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/login_btn"
                android:text="@string/next_step"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button3"
                app:layout_constraintTop_toTopOf="@+id/button3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>